feat(lists): adds some japanese colors names

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build.js"
+    "build": "node build.js",
+    "view": "jless colorlists.json"
   },
   "repository": {
     "type": "git",
