--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "color-name-lists",
   "version": "3.0.0",
   "description": "A collection of color name lists",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "lib": "lib"
   },
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/meodai/color-name-lists#readme",
   "dependencies": {
     "wikipedia-color-names": "^1.6.1"
+  },
+  "devDependencies": {
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   }
 }
