feat(lists): add ridgway list as NPM dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-name-lists",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "A collection of color name lists",
   "main": "src/index.js",
   "directories": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/meodai/color-name-lists#readme",
   "dependencies": {
+    "color-standards-and-color-nomenclature": "^1.1.0",
     "wikipedia-color-names": "^1.7.1"
   },
   "devDependencies": {
