--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-name-lists",
-  "version": "3.7.0",
+  "version": "3.8.0",
   "description": "A collection of color name lists",
   "main": "src/index.js",
   "directories": {
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "riso-colors": "^1.0.1"
   }
 }
