--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "homepage": "https://github.com/meodai/color-name-lists#readme",
   "dependencies": {
     "color-standards-and-color-nomenclature": "^1.1.0",
-    "wikipedia-color-names": "^1.8.1"
+    "wikipedia-color-names": "^1.8.1",
+    "riso-colors": "^1.0.1"
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "riso-colors": "^1.0.1"
+    "process": "^0.11.10"
   }
 }
