--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-name-lists",
-  "version": "3.8.1",
+  "version": "3.9.0",
   "description": "A collection of color name lists",
   "main": "src/index.js",
   "directories": {
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
-    "view": "jless colorlists.json"
+    "view": "jless ./dist/colorlists.json"
   },
   "repository": {
     "type": "git",
