--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-name-lists",
-  "version": "3.11.0",
+  "version": "3.12.0",
   "description": "A collection of color name lists",
   "main": "src/index.js",
   "directories": {
@@ -23,8 +23,9 @@
   "homepage": "https://github.com/meodai/color-name-lists#readme",
   "dependencies": {
     "color-standards-and-color-nomenclature": "^1.1.0",
-    "wikipedia-color-names": "^1.8.1",
-    "riso-colors": "^1.0.1"
+    "recueil-de-couleur": "^0.3.0",
+    "riso-colors": "^1.0.1",
+    "wikipedia-color-names": "^1.8.1"
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
