--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "homepage": "https://github.com/meodai/color-name-lists#readme",
   "dependencies": {
     "color-standards-and-color-nomenclature": "^1.1.0",
+    "nombres-de-colores": "^0.2.0",
     "recueil-de-couleur": "^0.11.0",
     "riso-colors": "^1.0.1",
-    "wikipedia-color-names": "^1.8.1"
+    "wikipedia-color-names": "^1.9.0"
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
