--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "color-standards-and-color-nomenclature": "^1.1.0",
     "farbnamen": "^0.7.0",
+    "hindi-color-names": "^1.0.0",
     "nombres-de-colores": "^0.6.0",
     "recueil-de-couleur": "^0.11.0",
     "riso-colors": "^1.0.1",
